--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="scroll-behavior: smooth">
+<html lang="en" style="">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="white_logo.ico" />
@@ -11,6 +11,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src="path/to/smooth-scroll.polyfills.min.js"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -41,5 +42,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="zenscroll-min.js"></script>
   </body>
 </html>
